# YOLO-Inference

./: .gitignore  Agent.md  README.md  Status.md
00-Tools/: convert_fp16.py  model_comparison.py  quantize_int8_static.py  run_inference.py  validate_quantization.py
01-YOLO-End2End-CPP/: CMakeLists.txt  README.md  debug_output.cpp  quantize.py  test_model.py
01-YOLO-End2End-CPP/include/: preprocess.h
01-YOLO-End2End-CPP/outputs/yolov5su/fp32/: zidane_result.json
01-YOLO-End2End-CPP/src/: main_onnx.cpp  postprocess.cpp
02-YOLO-End2End-Python/: README.md  config.yaml  requirements.txt  setup.py
02-YOLO-End2End-Python/outputs/yolov5su/fp32/: zidane_raw.npy  zidane_result.json
02-YOLO-End2End-Python/outputs/yolov5su/int8/: zidane_raw.npy  zidane_result.json
02-YOLO-End2End-Python/scripts/: compare_models.py  inference.py
02-YOLO-End2End-Python/src/: inference.py  model_comparison.py  quantize_models.py  test_precision_comparison.py  validate_quantization.py
02-tools/: compare_results.py  quantize_int8_dynamic.py  validate_quantization.py
03-yolo-cpp/: CMakeLists.txt  README.md  build.sh
03-yolo-cpp/include/: onnx_inference.h  ov_inference.h  postprocess.h
03-yolo-cpp/outputs/yolov5su/fp32/: zidane_result.json
03-yolo-cpp/outputs/yolov5su/int8/: zidane_result.json
03-yolo-cpp/src/: main_onnx.cpp  main_ov.cpp  onnx_inference.cpp  ov_inference.cpp  postprocess.cpp  preprocess.cpp
04-yolo-python/: README.md  requirements.txt
04-yolo-python/outputs/yolov5su/fp32/: zidane_raw.npy  zidane_result.json
04-yolo-python/outputs/yolov5su/int8/: station_raw.npy  station_result.json  zidane_raw.npy  zidane_result.json
04-yolo-python/src/: inference.py
05-yolo-c/: CMakeLists.txt  README.md
05-yolo-c/include/: postprocess.h  preprocess.h
05-yolo-c/src/: main.c  opencv_bridge.cpp  postprocess.c  preprocess.c
06-npu-golden-test/: README.md  RESEARCH.md  run_golden_test.py
06-npu-golden-test/outputs/: golden_test_report.json
